Scikit-Learn/Linear-Regression/Seldon/k8s/istio-resources.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: salary-predictor-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: salary-predictor
spec:
  hosts:
  - "*"
  gateways:
  - salary-predictor-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: salary-predictor-service
        port:
          number: 9000
